# songbird

./: .gitignore
songbird-client/: CMakeLists.txt  constants.h  loginscreen.cpp  loginscreen.h  main.cpp  mainwindow.cpp  mainwindow.h  networkmanager.cpp  networkmanager.h  registrationscreen.cpp  registrationscreen.h  user.cpp  user.h
songbird-server/: Cargo.toml  DETAILS.MD
songbird-server/src/: database.rs  main.rs  router.rs
songbird-server/src/handlers/: mod.rs  server_handlers.rs  user_handlers.rs
songbird-server/src/models/: channel.rs  direct_message_member.rs  message.rs  mod.rs  models.rs  response_types.rs  server.rs  server_member.rs  user.rs
songbird-server/src/repositories/: channel_repository.rs  direct_message_repository.rs  message_repository.rs  mod.rs  server_member_repository.rs  server_repository.rs  user_repository.rs
songbird-server/tests/: README.md  api_response_test.rs  server_handlers_test.rs  server_repository_test.rs  user_handlers_test.rs  user_repository_test.rs
