[package]
name = "songbird-server"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5"
password-hash = { version = "0.5.0", features = [ "rand_core", "getrandom" ] }
jsonwebtoken = "9.3.1"
time = "0.3.37"
rand = "0.9.0"
axum = "0.8.1"
serde = "1.0.218"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "tls-native-tls" ] }
tungstenite = "0.26.2"
tracing-subscriber = "0.3.19"
